src/scss/app.scss
/* ... */
.Apartments {

    padding: 10vh 0 0;

    &-title {
        margin-bottom: 1vh;

        &-highlight {
            font-size: 2rem;
            font-weight: 300;
            padding: 2vh 5vw;
            position: absolute;
            left: 0;
            background: $grey;
            color: $white;

            @media screen and(max-width: 1080px){
                position: relative;
                display: block;
                margin-bottom: 2vh;
                max-width: 50%;
            }

            @media screen and(max-width: 425px){
                max-width: 100%;
                text-align: center;
                padding: 2vh 0;
            }
        }

        &-normal {
            font-size: 1.6rem;
            font-weight: 500;
            letter-spacing: 1.5;
            letter-spacing: 2px;
            text-align: center;
            display: block;
            padding: 2vh 0;
            color: $mianText;

            @media screen and(max-width: 1080px){
                text-align: right;
                padding-right: 5vh;
            }

            @media screen and(max-width: 1024px){
                text-align: center;
            }

            @media screen and(max-width: 425px){
                padding-right: 0;
            }
        }
    }

    &-single {
        margin: 10vh 0;

        &-details {
            font-size: 1.6rem;
            font-weight: 300;
            padding-left: 5vw;
            list-style: inside;
            color: $mianText;

            &-highlight {
                font-weight: 500;
            }
        }

        &-views {
            margin-top: 10vh;
            display: flex;
            flex-wrap: wrap;
            align-items: flex-start;
            justify-content: center;

            &-left {
                flex-basis: 50%;
                padding-left: 5vw;

                & img {
                    max-width: 75%;
                    display: block;
                    margin: auto;
                }

                @media screen and(max-width: 425px){
                    flex-basis: 100%;
                    padding-left: 0;
                    margin: 1vh 0;
                }
            }

            &-right {
                flex-basis: 50%;
                min-height: 70vh;

                @media screen and(max-width: 425px){
                    flex-basis: 100%;
                    padding-left: 0;
                    margin: 1vh 0;
                    min-height: initial;
                }
            }

            &--reverse {
                & .Apartments-single-views-left {
                    order: 2;

                    @media screen and(max-width: 425px){
                        order: 1;
                    }
                }

                & .Apartments-single-views-right {
                    order: 1;

                    @media screen and(max-width: 425px){
                        order: 2;
                    }
                }
            }
        }
    }

    & .carousel .control-dots .dot {
        box-shadow: none;
        background: transparent;
        border-radius: 0;
        width: 20px;
        height: 20px;
        border: 1px solid $grey;

        &:hover, &.selected {
            background: $grey;
        }
    }

    & .carousel .control-dots {
        bottom: 1vh;
        padding-left: 1vw;
        text-align: left;
    }

    & .Carousel-single {
        height: 70vh;

        @media screen and(max-width: 375px){
            height: auto;
        }
    }

    & .carousel .slide img {
        align-self: stretch;

        @media screen and(max-width: 375px){
            align-self: flex-start;
        }
    }
}

.Location{
    background: $white;
    padding: 10vh 0 0;

    &-header {
        display: flex;
        flex-wrap: wrap;
        align-items: flex-start;

        &-left {
            flex-basis: 30%;

            @media screen and(max-width: 425px){
                flex-basis: 100%;
            }
        }

        &-right {
            flex-basis: 70%;

            @media screen and(max-width: 425px){
                flex-basis: 100%;
            }
        }

        &-title {
            font-size: 2rem;
            font-weight: 300;
            padding: 1vh 0 1vh 5vw;
            width: 70%;
            max-width: 300px;
            color: $mianText;
            background: $lightgrey;
            
            @media screen and(max-width: 425px){
                width: 100%;
                max-width: 100%;
                text-align: center;
                padding: 2vh 0;
            }
        }

        &-address {
            font-size: 1.6rem;
            font-weight: 300;
            padding: 4vh 5vw 0;
            line-height: 1.5;
            letter-spacing: 1px;
            color: $mianText;

            @media screen and(max-width: 425px){
                margin-bottom: 5vh;
            }
        }

        &-text {
            font-size: 1.6rem;
            font-weight: 300;
            letter-spacing: 1px;
            line-height: 2.5;
            padding-right: 5vw;
            color: $mianText;

            @media screen and(max-width: 425px){
                padding: 0 2vh;
            }
        }
    }

    &-map {
        margin-top: 10vh;
    }
}
/* ... */

